MAJOR CHANGES AND FIXES split active sheets using shift + control; preent SPACE to trigger buttons; create ROI; load image from input

--- a/paperSnake.css
+++ b/paperSnake.css
@@ -67,8 +67,12 @@ button.view.active{
 }
 
 .tool{
-    border-width: 1px;
+    border-width: 2px;
     border-color: cadetblue;
+}
+
+#button_ROI, #buttonUndoROI{
+    background-color: lightblue;
 }
 
 #button_measureDistance{
